# Procurement-Assistant

./: .gitignore  CI_CD_COMPLETE.md  CI_CD_SETUP_GUIDE.md  CI_SUCCESS_REPORT.md  CLAUDE_DESKTOP_SETUP.md  Dockerfile  INTEGRATION_TEST_RESULTS.md  MCP_INTEGRATION.md  MCP_SETUP_STEPS.md  QUICK_TEST_REFERENCE.md  README.md  REMOTE_ACCESS_GUIDE.md  SETUP_GUIDE.md  SHARE_WITH_NGROK.md  START_HERE_TESTING.md  TESTING_GUIDE.md  TEST_CHEAT_SHEET.md  TEST_COMMANDS.md  TEST_DOCUMENTATION_INDEX.md  TEST_FAILURE_FIX.md  TEST_SUITE_SUMMARY.md  UI_IMPROVEMENTS.md  UNIT_TEST_FIX.md  app.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_app.bat  run_tests.bat  start_with_ngrok.bat  test_mcp.py
.github/workflows/: code-quality.yml  docker-build.yml  tests.yml
backend/: agents.py  config.py  database.py  ingestion.py  llm.py  mcp_server.py  verify_migration.py
tests/: __init__.py  conftest.py
tests/ai/: test_agent_quality.py
tests/fixtures/: README.md  golden_procurement.csv
tests/integration/: test_chromadb.py  test_minio.py  test_rag_pipeline.py
tests/unit/: test_agents.py  test_config.py  test_ingestion.py  test_llm.py
ui/: tabs.py
